Fix overflows.

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap');
+
 body {
-    margin: 0;
+    font-family: "IBM Plex Sans", sans-serif;
+    margin: 0 15px;
     padding: 0;
+}
+
+#header {
+    padding: 15px;
+}
+
+#header > h1 {
+
 }
